--- a/SplitViewMenuUWP/SplitViewMenuUWP/SplitViewMenuUWP.csproj
+++ b/SplitViewMenuUWP/SplitViewMenuUWP/SplitViewMenuUWP.csproj
@@ -102,8 +102,24 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenario3\NavMenuItemTemplateSelector.cs" />
+    <Compile Include="Scenario3\Scenario3Main.xaml.cs">
+      <DependentUpon>Scenario3Main.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario3\Scenario3Page1.xaml.cs">
+      <DependentUpon>Scenario3Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario3\Scenario3Page2.xaml.cs">
+      <DependentUpon>Scenario3Page2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario3\Scenario3Page3.xaml.cs">
+      <DependentUpon>Scenario3Page3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario3\Scenario3ViewModel.cs" />
+    <Compile Include="Scenario1\Scenario1Main.xaml.cs">
+      <DependentUpon>Scenario1Main.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Scenario1\Scenario1Page1.xaml.cs">
       <DependentUpon>Scenario1Page1.xaml</DependentUpon>
     </Compile>
@@ -113,6 +129,21 @@
     <Compile Include="Scenario1\Scenario1Page3.xaml.cs">
       <DependentUpon>Scenario1Page3.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Scenario1\Scenario1ViewModel.cs" />
+    <Compile Include="Scenario2\Scenario2Main.xaml.cs">
+      <DependentUpon>Scenario2Main.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2\Scenario2NavMenuIItem.cs" />
+    <Compile Include="Scenario2\Scenario2Page1.xaml.cs">
+      <DependentUpon>Scenario2Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2\Scenario2Page2.xaml.cs">
+      <DependentUpon>Scenario2Page2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2\Scenario2Page3.xaml.cs">
+      <DependentUpon>Scenario2Page3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2\Scenario2ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -139,6 +170,26 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Scenario3\Scenario3Main.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario3\Scenario3Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario3\Scenario3Page2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario3\Scenario3Page3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario1\Scenario1Main.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Scenario1\Scenario1Page1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -148,6 +199,22 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Scenario1\Scenario1Page3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2\Scenario2Main.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2\Scenario2Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2\Scenario2Page2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2\Scenario2Page3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
