--- a/SplitViewMenuUWP/SplitViewMenu/SplitViewMenu.csproj
+++ b/SplitViewMenuUWP/SplitViewMenu/SplitViewMenu.csproj
@@ -105,9 +105,17 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\Fonts\fontawesome-webfont.svg" />
+    <Content Include="Assets\Fonts\FontAwesome.otf" />
+    <None Include="Assets\Fonts\fontawesome-webfont.eot" />
+    <Content Include="Assets\Fonts\fontawesome-webfont.ttf" />
+    <None Include="Assets\Fonts\fontawesome-webfont.woff" />
+    <None Include="Assets\Fonts\fontawesome-webfont.woff2" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumToFontFamilyConverter.cs" />
+    <Compile Include="FontFamily.cs" />
     <Compile Include="INavigationMenuItem.cs" />
     <Compile Include="NavMenuListView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
