--- a/SplitViewMenuUWP/SplitViewMenuUWP/SplitViewMenuUWP.csproj
+++ b/SplitViewMenuUWP/SplitViewMenuUWP/SplitViewMenuUWP.csproj
@@ -93,6 +93,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="FontAwesome.otf" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
