added suport the Header to the SplitViewMenu content.

--- a/SplitViewMenuUWP/SplitViewMenu/SplitViewMenu.csproj
+++ b/SplitViewMenuUWP/SplitViewMenu/SplitViewMenu.csproj
@@ -105,7 +105,9 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Content Include="FontAwesome.otf" />
+    <Content Include="FontAwesome.otf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
